# hello-github-actions

./: CMakeLists.txt
.github/workflows/: main.yml
action-test/: entrypoint.sh
test/: CMakeLists.txt  myFirstTest-test.cpp
